--- a/web_flask/templates/profiles/profiles_list.html
+++ b/web_flask/templates/profiles/profiles_list.html
@@ -2,66 +2,59 @@
 <html lang="en">
 
 <head>
-  <title>Survey Storm</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+	<title>Survey Storm</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+		crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+		crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 
-  {% assets "styles_all" %}
-  <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
-  {% endassets %}
+	{% assets "styles_all" %}
+	<link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
+	{% endassets %}
 
-  {% assets "js_all" %}
-  <script type="text/javascript" src="{{ ASSET_URL }}"></script>
-  {% endassets %}
+	{% assets "js_all" %}
+	<script type="text/javascript" src="{{ ASSET_URL }}"></script>
+	{% endassets %}
 
-  <link rel="icon" href="/favicon.ico" />
+	<link rel="icon" href="/favicon.ico" />
 </head>
 
 <body>
 
-  {{ render_partial('shared/_header.html') }}
-  <div class='container-fluid pt-5'>
-    <h1>Profiles<input class="btn btn-success btn-lg float-right" type="button" value="Create Profile"
-      onclick="window.location.href = '/profiles/create';"></h1>
-    <div class="row justify-content-lg-start">
-      <section class="alert_success_delete_profile"></section>
-    </div>
-    <table class="table table-hover table-dark">
-      <thead align="center"> 
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">First Name</th>
-          <th scope="col">Last Name</th>
-          <th scope="col">Gender</th>
-          <th scope="col">Watch Update Delete</th>
-        </tr>
-      </thead>
-      <tbody class="profiles_list" align="center">
-      </tbody>
-    </table>
-    <nav aria-label="Page navigation example">
-      <ul class="pagination justify-content-end">
-        <li class="page-item disabled">
-          <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item">
-          <a class="page-link" href="#">Next</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-  {{ render_partial('shared/_footer.html') }}
+	{{ render_partial('shared/_header.html') }}
+	<input id="page_argument_profile" name="page" type="hidden" value="{{ page }}" />
+
+	<div class='container-fluid pt-5'>
+		<h1>Profiles<input class="btn btn-success btn-lg float-right" type="button" value="Create Profile"
+				onclick="window.location.href = '/profiles/create';"></h1>
+		<div class="row justify-content-lg-start">
+			<section class="alert_success_delete_profile"></section>
+		</div>
+		<table class="table table-hover table-dark">
+			<thead align="center">
+				<tr>
+					<th scope="col">#</th>
+					<th scope="col">First Name</th>
+					<th scope="col">Last Name</th>
+					<th scope="col">Gender</th>
+					<th scope="col">Watch Update Delete</th>
+				</tr>
+			</thead>
+			<tbody class="profiles_list" align="center">
+			</tbody>
+		</table>
+		<nav aria-label="Page navigation example">
+			<ul class="pagination justify-content-end" id="profile_pagination">
+			</ul>
+		</nav>
+	</div>
+	{{ render_partial('shared/_footer.html') }}
 </body>
 
 </html>
