--- a/web_flask/templates/users/users_list.html
+++ b/web_flask/templates/users/users_list.html
@@ -28,9 +28,10 @@
 <body>
 
 	{{ render_partial('shared/_header.html') }}
+	<input id="page_argument_user" name="page" type="hidden" value="{{ page }}" />
 	<div class='container-fluid pt-5'>
 		<h1 class="mb-5">Users<input class="btn btn-success btn-lg float-right" type="button" value="Create user"
-        onclick="window.location.href = '/users/create';"></h1>
+				onclick="window.location.href = '/users/create';"></h1>
 		<div class="row justify-content-lg-start">
 			<section class="alert_success_delete_user"></section>
 		</div>
@@ -49,16 +50,7 @@
 			</tbody>
 		</table>
 		<nav aria-label="Page navigation example">
-			<ul class="pagination justify-content-end">
-				<li class="page-item disabled">
-					<a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-				</li>
-				<li class="page-item"><a class="page-link" href="#">1</a></li>
-				<li class="page-item"><a class="page-link" href="#">2</a></li>
-				<li class="page-item"><a class="page-link" href="#">3</a></li>
-				<li class="page-item">
-					<a class="page-link" href="#">Next</a>
-				</li>
+			<ul class="pagination justify-content-end" id="user_pagination">
 			</ul>
 		</nav>
 	</div>
