--- a/web_flask/templates/questions/question_show.html
+++ b/web_flask/templates/questions/question_show.html
@@ -14,13 +14,20 @@
       crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 
+	<script type="text/javascript" src="../../static/scripts/event/API_status.js"></script>
+	<script type="text/javascript" src="../../static/scripts/event/log_out.js"></script>
+	<script type="text/javascript" src="../../static/scripts/event/login_btn.js"></script>
+
+	<script type="text/javascript" src="../../static/scripts/event/question_show.js"></script>
+
+
     {% assets "styles_all" %}
       <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
     {% endassets %}
 
-    {% assets "js_all" %}
+    <!-- {% assets "js_all" %}
       <script type="text/javascript" src="{{ ASSET_URL }}"></script>
-    {% endassets %}
+    {% endassets %} -->
 
     <link rel="icon" href="/favicon.ico" />
   </head>
