--- a/web_flask/templates/dashboard.html
+++ b/web_flask/templates/dashboard.html
@@ -14,6 +14,9 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
 		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 		crossorigin="anonymous"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 
 	<script type="text/javascript" src="../static/scripts/event/API_status.js"></script>
@@ -21,7 +24,7 @@
 	<script type="text/javascript" src="../static/scripts/event/login_btn.js"></script>
 	<script type="text/javascript" src="../static/scripts/event/menu_user.js"></script>
 
-
+	<script type="text/javascript" src="../static/scripts/statistics.js"></script>
 	<script type="text/javascript" src="../static/scripts/dashboard.js"></script>
 
 
@@ -75,26 +78,27 @@
 		</div>
 
 
-		<div class="row badge-success mt-2">
+		<div class="row badge mt-2">
 			<h2>Stats & Graph</h2>
 		</div>
 
 
 		<div class="row mt-5">
-			<div class="col-sm-6">
+			<div class="col-sm-4">
 				<div class="card">
 					<div class="card-body">
-						<h5 class="card-title">Special title treatment</h5>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
+						<div class= "user_category_statistic">
+							<canvas id="userCategoriesChart"></canvas>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-sm-6">
-				<div class="card overflow-auto">
+			<div class="col-sm-7">
+				<div class="card">
 					<div class="card-body">
-						<img
-							src="https://support.content.office.net/fr-fr/media/c957b99e-083e-4443-afc6-c372ea43ed08.png">
+						<div class="user_survey_statistic">
+							<canvas id="userSurveysChart"></canvas>
+						</div>						  
 					</div>
 				</div>
 			</div>
